Fixed spacing issue in code select modal

--- a/frontend/src/styles/components/builder/_CodeSelectModal.scss
+++ b/frontend/src/styles/components/builder/_CodeSelectModal.scss
@@ -1,5 +1,6 @@
 .element-modal__container .element-modal__search {
   padding: 1em 2em;
+  margin: 0;
 
   &-system {
     margin: 0;
